--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="icon" href="/IMG/logo.png" />
+    <link rel="icon" href="IMG/logo.png" />
 
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@700&display=swap"
@@ -18,8 +18,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Stick+No+Bills:wght@200&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/CSS/style.css" />
-    <script src="/JS/checkPassword.js"></script>
+    <link rel="stylesheet" href="CSS/style.css" />
+    <script src="JS/checkPassword.js"></script>
     <title>Personalized Password Generator</title>
   </head>
   <body>
