commit on 'main'

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
             <div class="content-2">
               <h1 class="title">Keep the Core Parts of your Password</h1>
               <br>
-              <p class="access">Only Interchange the Website Name for the Website you are Trying To Access</p>
+              <p class="access">Only interchange the website name for the website you are trying to access</p>
               <br>
               <br>
               <h3>Creating passwords can be difficult. Easy to memorize passwords are just as easy to crack for someone 
@@ -172,10 +172,10 @@
                   <div class="column">
                     <h1>Your Generated Password</h1>
                     <p>= <br>
-                    The Answer for Secuirty Question 1 with Letters Replaced as Characters<br>
+                    The Answer for Security Question 1 with Letters Replaced as Characters<br>
                   + <br>
                 Website Name you are Trying to Access<br>+<br>
-                The Answer for Secuirty Question 2 with Letters Replaced as Characters</p>
+                The Answer for Security Question 2 with Letters Replaced as Characters</p>
                   </div>
                   <div class="column">
                     <h1>Character Replacements</h1>
@@ -187,9 +187,9 @@
               
                 <div class="example">
                   <p>Example: My first pet was named 'Sandra' and my first ZIP Code was '09442'
-                    <br> www.gmail.com: $andr@GMAIL90442 
-                    <br> www.amazon.com: $andr@AMAZON90442 
-                    <br>www.microsoft.com: $andr@MICROSOFT90442</p>
+                    <br> www.gmail.com: $@ndr@GMAIL90442 
+                    <br> www.amazon.com: $@ndr@AMAZON90442 
+                    <br>www.microsoft.com: $@ndr@MICROSOFT90442</p>
                     <br>
                     <p class="happy">Happy Secure Browsing!</p>
                 </div>
@@ -205,7 +205,7 @@
               <br>
               <h1>Secure Your Passwords</h1>
                 <p>
-                  Your password is not secure if it can be brute-forced <br>or found in a database of leaked passwords.
+                  Your password is not secure if it can be brute-forced <br>or found in a database of leaked passwords (dictionary attack).
                 </p>
                 <br>
                   <p class="note">
